k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: front

spec:
  replicas: 1  # Number of identical pods to create 
  selector:  
    # We want in this deployment pod with matchLabels "component: api"
    matchLabels:
      component: front-element
  
  # Template is specifications for one pod
  template:
    metadata:
      labels:
        component: front-element
    spec:
      restartPolicy: Always
      containers:
      - image: meacedric/emotiondetection-front
        name: front
        imagePullPolicy: Always
